[gd_scene load_steps=11 format=3 uid="uid://bv5haqs18b2e7"]

[ext_resource type="Script" uid="uid://bta3ctdn5qf88" path="res://Scenes/main.gd" id="1_yrjvw"]
[ext_resource type="PackedScene" uid="uid://d04i5bc5ymtvv" path="res://Objects/Ball/ball.tscn" id="2_vhld5"]
[ext_resource type="PackedScene" uid="uid://dm2254xwde58h" path="res://Objects/Bar/bar.tscn" id="3_ud1m4"]
[ext_resource type="Texture2D" uid="uid://beslmj16nynoy" path="res://assets/arts/Computer.png" id="4_7ijuj"]
[ext_resource type="Script" uid="uid://vbxq3ujo7f6e" path="res://Scenes/HUD.gd" id="5_qjipy"]
[ext_resource type="Texture2D" uid="uid://rvddqgv36fk3" path="res://assets/arts/ScoreBar.png" id="5_yrd0c"]
[ext_resource type="FontFile" uid="uid://8wr75cw5elqn" path="res://assets/fonts/Teko-Bold.ttf" id="6_bdjl3"]
[ext_resource type="FontFile" uid="uid://ce2gedlmfy0an" path="res://assets/fonts/Teko-Regular.ttf" id="9_ynf5e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ca8l1"]
size = Vector2(1180, 20)

[sub_resource type="LabelSettings" id="LabelSettings_b3cuk"]
font = ExtResource("6_bdjl3")
font_size = 30

[node name="Main" type="Node2D"]
script = ExtResource("1_yrjvw")

[node name="Sprite2D" type="Control" parent="."]
custom_minimum_size = Vector2(1300, 700)
layout_mode = 3
anchors_preset = 0

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Ball" parent="." instance=ExtResource("2_vhld5")]
position = Vector2(578, 316)

[node name="Bars" type="Node2D" parent="."]

[node name="Player" parent="Bars" node_paths=PackedStringArray("ball") instance=ExtResource("3_ud1m4")]
position = Vector2(28, 316)
ball = NodePath("../../Ball")

[node name="CPU" parent="Bars" node_paths=PackedStringArray("ball") instance=ExtResource("3_ud1m4")]
position = Vector2(1118, 331)
is_cpu = true
ball = NodePath("../../Ball")
metadata/_edit_group_ = true

[node name="Sprite2D" parent="Bars/CPU" index="0"]
texture = ExtResource("4_7ijuj")

[node name="Walls" type="Node2D" parent="."]

[node name="Wall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall"]
position = Vector2(578, 57)
shape = SubResource("RectangleShape2D_ca8l1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls/Wall"]
position = Vector2(578, 651)
shape = SubResource("RectangleShape2D_ca8l1")

[node name="Goals" type="Node2D" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("5_qjipy")

[node name="Control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CheckButton" type="CheckButton" parent="HUD/Control"]
layout_mode = 0
offset_left = 356.0
offset_top = 10.0
offset_right = 495.0
offset_bottom = 42.0
theme_override_fonts/font = ExtResource("6_bdjl3")
text = "AUTOPILOT"

[node name="Scores" type="Node2D" parent="HUD"]

[node name="Sprite2D" type="Sprite2D" parent="HUD/Scores"]
position = Vector2(185, 32)
texture = ExtResource("5_yrd0c")

[node name="ScoreLeft" type="Label" parent="HUD/Scores/Sprite2D"]
offset_left = -143.0
offset_top = -22.0
offset_right = 126.0
offset_bottom = 4.0
theme_override_fonts/font = ExtResource("9_ynf5e")
text = "0"
label_settings = SubResource("LabelSettings_b3cuk")

[node name="Sprite2D2" type="Sprite2D" parent="HUD/Scores"]
position = Vector2(968, 33)
texture = ExtResource("5_yrd0c")
flip_h = true

[node name="ScoreRight" type="Label" parent="HUD/Scores/Sprite2D2"]
offset_left = -131.0
offset_top = -23.0
offset_right = 144.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("9_ynf5e")
text = "0"
label_settings = SubResource("LabelSettings_b3cuk")
horizontal_alignment = 2
vertical_alignment = 1
text_direction = 1

[connection signal="out" from="Ball" to="HUD" method="_on_ball_out"]
[connection signal="toggled" from="HUD/Control/CheckButton" to="." method="_on_check_button_toggled"]

[editable path="Bars/CPU"]
